[package]
name = "solana-shardmap"
version = "0.1.0"
edition = "2024"
description = "A generic shard-based mapping utility for Solana programs (Anchor compatible)"
license = "MIT"
repository = "https://github.com/ogbuanu/solana-shardmap"
authors = ["Ikenna Ogbuanu <ogbuanuikenna66@gmail.com>"]

[lib]
name = "solana_shardmap"
crate-type = ["lib"]

[dependencies]
anchor-lang = "0.30.1"  
solana-program = "3.0.0"
