[package]
name = "solana-shardmap"
version = "0.1.0"
edition = "2024"
description = "A generic shard-based mapping utility for Solana programs (Anchor compatible)"
license = "MIT"
repository = "https://github.com/ogbuanu/solana-shardmap"
authors = ["Ikenna Ogbuanu <ogbuanuikenna66@gmail.com>"]
readme = "README.md"
keywords = ["solana", "program", "mapping", "shard", "anchor"]
categories = ["cryptography", "data-structures"]
[lib]
name = "solana_shardmap"
crate-type = ["lib"]

[dependencies]
anchor-lang = "0.32.1"  
solana-program = "3.0.0"
